dev:
  * use pyfftw by default if it is installed
  * add new plottype: velocity change versus time of different station/component combinations
    together with joint estimate
  * allow to set compression and other options when creating a dataset
  * allow to set libver for new HDF5 files (default is 'earliest' for best backwards compatibility)
v0.6.0:
  * yam can now be used on Windows, tests are passing, but multiproccesing is not yet working
    (see issue #4)
v0.5.0:
  * major refactoring of stretch module, some config options for stretching are renamed,
    the resulting dictionaries changed in a backwards incompatible way, please (a) use
    yam version < 0.5 or (b) adapt config file and run yam stretch again for any existing project
v0.4.3:
  * add demean option (before filtering)
  * add plugin option for timenorm
  * refactor timenorm function, some kwargs are deprecated
  * timenorm and spectral_whitening are now working with Trace objects (instead of numpy arrays)
  * add dpi option for most plots to set resolution of saved images
  * more verbose error message if coordinates of station cannot be found
  * fix: guarantee same length of traces which are correlated (necessary if tolerance_shift is set)
v0.4.2:
  * adapt to GFZ FDSN webservices and allow only 1 thread when downloading example data
v0.4.1:
  * extension of images is now specified without dot, e.g. 'png', 'pdf'
v0.4.0:
  * rename plotting options setting x- and y-limits to xlim and ylim
  * parallel processing for stretching, reference trace must be used (--reftr)
  * allow full stack with '' or 'all' (e.g. for creating a refence trace)
  * parallel processing for full stack
  * store correlations and sim_mat as half precission float16 by default
  * fix various small bugs
  * move some functions to new io module
v0.3.0:
  * add scan subcommand
  * add debug option (--pdb)
  * add exhaustive online documentation
  * add possibility to correlate "R" and "T" rotated components (experimental)